fixed problem with decks in controller and ui